--- a/.crds/chainsaw.kyverno.io_steptemplates.yaml
+++ b/.crds/chainsaw.kyverno.io_steptemplates.yaml
@@ -188,6 +188,9 @@ spec:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
                           type: string
+                        workDir:
+                          description: WorkDir is the working directory for command.
+                          type: string
                       required:
                       - entrypoint
                       type: object
@@ -651,6 +654,9 @@ spec:
                         timeout:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
+                          type: string
+                        workDir:
+                          description: WorkDir is the working directory for script.
                           type: string
                       type: object
                     sleep:
@@ -898,6 +904,9 @@ spec:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
                           type: string
+                        workDir:
+                          description: WorkDir is the working directory for command.
+                          type: string
                       required:
                       - entrypoint
                       type: object
@@ -1361,6 +1370,9 @@ spec:
                         timeout:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
+                          type: string
+                        workDir:
+                          description: WorkDir is the working directory for script.
                           type: string
                       type: object
                     sleep:
@@ -1608,6 +1620,9 @@ spec:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
                           type: string
+                        workDir:
+                          description: WorkDir is the working directory for command.
+                          type: string
                       required:
                       - entrypoint
                       type: object
@@ -2071,6 +2086,9 @@ spec:
                         timeout:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
+                          type: string
+                        workDir:
+                          description: WorkDir is the working directory for script.
                           type: string
                       type: object
                     sleep:
@@ -2511,6 +2529,9 @@ spec:
                         timeout:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
+                          type: string
+                        workDir:
+                          description: WorkDir is the working directory for command.
                           type: string
                       required:
                       - entrypoint
@@ -3358,6 +3379,9 @@ spec:
                         timeout:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
+                          type: string
+                        workDir:
+                          description: WorkDir is the working directory for script.
                           type: string
                       type: object
                     sleep:
