--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -189,6 +189,9 @@ spec:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
                           type: string
+                        workDir:
+                          description: WorkDir is the working directory for command.
+                          type: string
                       required:
                       - entrypoint
                       type: object
@@ -653,6 +656,9 @@ spec:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
                           type: string
+                        workDir:
+                          description: WorkDir is the working directory for script.
+                          type: string
                       type: object
                     sleep:
                       description: Sleep defines zzzz.
@@ -1028,6 +1034,10 @@ spec:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
                                 type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  command.
+                                type: string
                             required:
                             - entrypoint
                             type: object
@@ -1504,6 +1514,10 @@ spec:
                               timeout:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
+                                type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  script.
                                 type: string
                             type: object
                           sleep:
@@ -1756,6 +1770,10 @@ spec:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
                                 type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  command.
+                                type: string
                             required:
                             - entrypoint
                             type: object
@@ -2232,6 +2250,10 @@ spec:
                               timeout:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
+                                type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  script.
                                 type: string
                             type: object
                           sleep:
@@ -2519,6 +2541,10 @@ spec:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
                                 type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  command.
+                                type: string
                             required:
                             - entrypoint
                             type: object
@@ -2995,6 +3021,10 @@ spec:
                               timeout:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
+                                type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  script.
                                 type: string
                             type: object
                           sleep:
@@ -3480,6 +3510,10 @@ spec:
                               timeout:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
+                                type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  command.
                                 type: string
                             required:
                             - entrypoint
@@ -4347,6 +4381,10 @@ spec:
                                 description: Timeout for the operation. Overrides
                                   the global timeout set in the Configuration.
                                 type: string
+                              workDir:
+                                description: WorkDir is the working directory for
+                                  script.
+                                type: string
                             type: object
                           sleep:
                             description: Sleep defines zzzz.
@@ -4856,6 +4894,9 @@ spec:
                               description: Timeout for the operation. Overrides the
                                 global timeout set in the Configuration.
                               type: string
+                            workDir:
+                              description: WorkDir is the working directory for command.
+                              type: string
                           required:
                           - entrypoint
                           type: object
@@ -5322,6 +5363,9 @@ spec:
                             timeout:
                               description: Timeout for the operation. Overrides the
                                 global timeout set in the Configuration.
+                              type: string
+                            workDir:
+                              description: WorkDir is the working directory for script.
                               type: string
                           type: object
                         sleep:
