--- a/pkg/data/crds/chainsaw.kyverno.io_configurations.yaml
+++ b/pkg/data/crds/chainsaw.kyverno.io_configurations.yaml
@@ -172,6 +172,9 @@ spec:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
                           type: string
+                        workDir:
+                          description: WorkDir is the working directory for command.
+                          type: string
                       required:
                       - entrypoint
                       type: object
@@ -635,6 +638,9 @@ spec:
                         timeout:
                           description: Timeout for the operation. Overrides the global
                             timeout set in the Configuration.
+                          type: string
+                        workDir:
+                          description: WorkDir is the working directory for script.
                           type: string
                       type: object
                     sleep:
@@ -1120,6 +1126,9 @@ spec:
                               description: Timeout for the operation. Overrides the
                                 global timeout set in the Configuration.
                               type: string
+                            workDir:
+                              description: WorkDir is the working directory for command.
+                              type: string
                           required:
                           - entrypoint
                           type: object
@@ -1586,6 +1595,9 @@ spec:
                             timeout:
                               description: Timeout for the operation. Overrides the
                                 global timeout set in the Configuration.
+                              type: string
+                            workDir:
+                              description: WorkDir is the working directory for script.
                               type: string
                           type: object
                         sleep:
