--- a/.schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/.schemas/json/configuration-chainsaw-v1alpha1.json
@@ -565,6 +565,13 @@
                       "string",
                       "null"
                     ]
+                  },
+                  "workDir": {
+                    "description": "WorkDir is the working directory for command.",
+                    "type": [
+                      "string",
+                      "null"
+                    ]
                   }
                 },
                 "additionalProperties": false
@@ -1331,6 +1338,13 @@
                   },
                   "timeout": {
                     "description": "Timeout for the operation. Overrides the global timeout set in the Configuration.",
+                    "type": [
+                      "string",
+                      "null"
+                    ]
+                  },
+                  "workDir": {
+                    "description": "WorkDir is the working directory for script.",
                     "type": [
                       "string",
                       "null"
