--- a/pkg/data/crds/chainsaw.kyverno.io_configurations.yaml
+++ b/pkg/data/crds/chainsaw.kyverno.io_configurations.yaml
@@ -831,11 +831,14 @@ spec:
                 type: integer
               reportFormat:
                 description: |-
-                  ReportFormat determines test report format (JSON|XML|nil) nil == no report.
+                  ReportFormat determines test report format (JSON|XML|JUNIT-TEST|JUNIT-STEP|JUNIT-OPERATION|nil) nil == no report.
                   maps to report.Type, however we don't want generated.deepcopy to have reference to it.
                 enum:
                 - JSON
                 - XML
+                - JUNIT-TEST
+                - JUNIT-STEP
+                - JUNIT-OPERATION
                 type: string
               reportName:
                 default: chainsaw-report
@@ -1761,10 +1764,13 @@ spec:
                 properties:
                   format:
                     default: JSON
-                    description: ReportFormat determines test report format (JSON|XML).
+                    description: ReportFormat determines test report format (JSON|XML|JUNIT-TEST|JUNIT-STEP|JUNIT-OPERATION).
                     enum:
                     - JSON
                     - XML
+                    - JUNIT-TEST
+                    - JUNIT-STEP
+                    - JUNIT-OPERATION
                     type: string
                   name:
                     default: chainsaw-report
