fix: make template required in step template
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -4625,6 +4625,8 @@ spec:
                         template:
                           description: Template references a step template.
                           type: string
+                      required:
+                      - template
                       type: object
                   type: object
                 type: array
