docs: add jp funcs docs in menu
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/website/mkdocs.yaml
+++ b/website/mkdocs.yaml
@@ -87,7 +87,101 @@ nav:
   - JMESPath:
     - Functions: reference/jp/functions.md
     - Examples:
+      - reference/jp/examples/abs.md
+      - reference/jp/examples/add.md
+      - reference/jp/examples/as_string.md
+      - reference/jp/examples/at.md
+      - reference/jp/examples/avg.md
+      - reference/jp/examples/base64_decode.md
+      - reference/jp/examples/base64_encode.md
+      - reference/jp/examples/ceil.md
+      - reference/jp/examples/compare.md
+      - reference/jp/examples/concat.md
+      - reference/jp/examples/contains.md
+      - reference/jp/examples/divide.md
+      - reference/jp/examples/ends_with.md
+      - reference/jp/examples/env.md
+      - reference/jp/examples/equal_fold.md
+      - reference/jp/examples/find_first.md
+      - reference/jp/examples/find_last.md
+      - reference/jp/examples/floor.md
+      - reference/jp/examples/from_items.md
+      - reference/jp/examples/group_by.md
+      - reference/jp/examples/items.md
+      - reference/jp/examples/join.md
+      - reference/jp/examples/json_parse.md
+      - reference/jp/examples/keys.md
+      - reference/jp/examples/label_match.md
+      - reference/jp/examples/length.md
+      - reference/jp/examples/lookup.md
+      - reference/jp/examples/lower.md
+      - reference/jp/examples/map.md
+      - reference/jp/examples/max.md
+      - reference/jp/examples/max_by.md
+      - reference/jp/examples/merge.md
+      - reference/jp/examples/min.md
+      - reference/jp/examples/min_by.md
+      - reference/jp/examples/modulo.md
+      - reference/jp/examples/multiply.md
+      - reference/jp/examples/not_null.md
+      - reference/jp/examples/object_from_lists.md
+      - reference/jp/examples/pad_left.md
+      - reference/jp/examples/pad_right.md
+      - reference/jp/examples/parse_json.md
+      - reference/jp/examples/parse_yaml.md
+      - reference/jp/examples/path_canonicalize.md
+      - reference/jp/examples/pattern_match.md
+      - reference/jp/examples/random.md
+      - reference/jp/examples/regex_match.md
+      - reference/jp/examples/regex_replace_all.md
+      - reference/jp/examples/regex_replace_all_literal.md
+      - reference/jp/examples/replace.md
+      - reference/jp/examples/replace_all.md
+      - reference/jp/examples/reverse.md
+      - reference/jp/examples/round.md
+      - reference/jp/examples/semver_compare.md
+      - reference/jp/examples/sort.md
+      - reference/jp/examples/sort_by.md
+      - reference/jp/examples/split.md
+      - reference/jp/examples/starts_with.md
+      - reference/jp/examples/subtract.md
+      - reference/jp/examples/sum.md
+      - reference/jp/examples/time_add.md
+      - reference/jp/examples/time_after.md
+      - reference/jp/examples/time_before.md
+      - reference/jp/examples/time_between.md
+      - reference/jp/examples/time_diff.md
+      - reference/jp/examples/time_now.md
+      - reference/jp/examples/time_now_utc.md
+      - reference/jp/examples/time_parse.md
+      - reference/jp/examples/time_since.md
+      - reference/jp/examples/time_to_cron.md
+      - reference/jp/examples/time_truncate.md
+      - reference/jp/examples/time_utc.md
+      - reference/jp/examples/to_array.md
+      - reference/jp/examples/to_boolean.md
+      - reference/jp/examples/to_lower.md
+      - reference/jp/examples/to_number.md
+      - reference/jp/examples/to_string.md
+      - reference/jp/examples/to_upper.md
+      - reference/jp/examples/trim.md
+      - reference/jp/examples/trim_left.md
+      - reference/jp/examples/trim_prefix.md
+      - reference/jp/examples/trim_right.md
+      - reference/jp/examples/trim_space.md
+      - reference/jp/examples/truncate.md
+      - reference/jp/examples/type.md
+      - reference/jp/examples/upper.md
+      - reference/jp/examples/values.md
+      - reference/jp/examples/wildcard.md
+      - reference/jp/examples/x509_decode.md
+      - reference/jp/examples/x_k8s_exists.md
       - reference/jp/examples/x_k8s_get.md
+      - reference/jp/examples/x_k8s_list.md
+      - reference/jp/examples/x_k8s_resource_exists.md
+      - reference/jp/examples/x_k8s_server_version.md
+      - reference/jp/examples/x_metrics_decode.md
+      - reference/jp/examples/zip.md
   - Command Line:
     - chainsaw: reference/commands/chainsaw.md
     - chainsaw assert: reference/commands/chainsaw_assert.md
