feat: add sharding support
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,7 @@
                 "./testdata/e2e/examples",
                 "--config",
                 "./testdata/e2e/config.yaml",
+                "--remarshal",
             ]
         },
         {
